# thetc-auth

./: Cargo.toml  README.md  shell.nix
.github/workflows/: mirror.yml
examples/: makeuser.rs  server.rs
resources/: postgres_setup.sql
src/: lib.rs  password_strategy.rs  session.rs  user.rs
src/appauth/: mod.rs  postgres_redis.rs
src/session/: memory.rs  postgres.rs  redis.rs
src/user/: postgres.rs
src/username/: ascii.rs  email.rs  mod.rs
src/util/: deadpool.rs  mod.rs
