[package]
name = "thetc-auth"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
argon2 = { version = "0.2.3", features = ["std"] }
chrono = "0.4.19"
rand = "0.8.4"
rand_core = { version = "0.6.3", features = ["std"] }
secrecy = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
thiserror = "1.0.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
