[package]
name = "thetc-auth"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
argon2 = { version = "0.3.1", features = ["std"] }
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool-redis = "0.10.0"
nova = "0.5.2"
rand = "0.8.4"
rand_core = { version = "0.6.3", features = ["std"] }
redis = { version = "0.21.4", features = ["tokio-comp"] }
secrecy = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "macros"] }
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
