[package]
name = "thetc-auth"
description = "Authentication and authorization tools"
version = "0.3.0"
authors = ["Brendan Molloy <brendan@technocreatives.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
argon2 = { version = "0.4", features = ["std"] }
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool = { version = "0.9.2", features = ["rt_tokio_1"], optional = true } 
deadpool-redis = "0.10.0"
nova = "0.5.2"
rand = "0.8.4"
redis = { version = "0.21.4", features = ["tokio-comp"] }
secrecy = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "macros"] }
thiserror = "1.0.26"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.15.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = []
